--- a/Luan e o Dever de Casa - TDGA/Luan e o Dever de Casa - TDGA/index.html
+++ b/Luan e o Dever de Casa - TDGA/Luan e o Dever de Casa - TDGA/index.html
@@ -6,7 +6,7 @@
 	<meta charseat= "UTF-8"/>
 	<meta name= "viewport" content="width=device-device-width,initial,scale=1.0"/>
 	<meta name= "description content=
-							Autores: Léo Kenzo, Lucas Barreto
+							Autores: Léo Kenzo, Lucas Barreto e Ruan Ruales
 							Data:23/10/22
 							Titulo: Projeto DJW"/>
 <link rel="stylesheet" type= "text/css" href="css/estilo.css"/>
